public/css/styles.css
/* colour: #202b41 */

html {
    height: 100%;
    position: relative;
}
body {
    font-family: sans-serif;
    height: 100%;
}

.jumbotron {
    text-align: center;
    margin-top: 20px;
}

#recent-results, #local-games {
    font-size: larger;
}

a.local-game {

}

.small-board {
    float: left;
    margin: 5px;
    width: 215px;
}

.small-board .board {
    width: 100px;
    height: 75px;
    border-radius: 2px;
    border-width: 0 2px;
}

.small-board .board .column {
    border-width: 2px 0;
}

.small-board .token {
    background-size: 105%;
}

.game-container {
    display: flex;
    height: 100%;
    background-color: #dae0e8;
}

.board-container {
    padding: 10px 50px;
    flex-grow: 1;
    text-align: center;
}

.chat-container {
    flex-shrink: 0;
    width: 300px;
    position: relative;
    background-color: #cad2dd;
    display: flex;
    flex-direction: column;
}

.board {
    display: flex;
    flex-direction: row;
    margin: auto;
    width: 45vw;
    height: 30vw;
    max-width: 1200px;
    background-color: #a3abb6;
    border-radius: 10px;
    border: 3px solid #202b41;
    position: relative;
}

.column {
    display: flex;
    flex-direction: column-reverse;
    flex-grow: 1;
    border-width: 5px 0;
    border-style: solid;
    border-color: #202b41;
}

.column:hover {
    background-color: white;
}

.cell {
    flex-grow: 1;
    position: relative;
}

.token {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-size: 102%;
    background-position: center center;
    text-align: center;
}

.token.player-1 {
    background-image: url('../images/token-1.png');
}

.token.player-2 {
    background-image: url('../images/token-2.png');
}

.token.player-1.winning  {
    background-image: url('../images/token-1-win.png');
}

.token.player-2.winning  {
    background-image: url('../images/token-2-win.png');
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1000;
    background-image: url('../images/cell.png');
    background-size: 100% 100%;
}

#status {
    margin: auto;
    font-size: large;
    font-weight: bold;
}

.player-1 {
    color: #e81216;
}

.player-2 {
    color: #e5ac49;
}

#chat {
    padding: 5px;
    flex-grow: 1;
    overflow-y: scroll;
}

#chat-status {
    background-color: #a3abb6;
    padding: 5px;
}

#chat-input {
    flex-shrink: 0;
    padding: 10px;
    border: none;
    background-color: white;
}

.player-name {
    font-weight: bold;
}

.chat-status {
    font-style: italic;
}

@media only screen and (max-width : 768px) {
    .game-container {
        flex-direction: column;
    }

    .board-container {
        padding: 5px 5px 20px 5px;
        flex-grow: 0;
    }

    .chat-container {
        height: 120px;
        width: 100%;
        flex-grow: 1;
    }

    #chat-status {
        position: absolute;
        right: 0;
    }

    .board {
        width: 90vw;
    }
}

#options {
    margin-top: 1em;
}

@keyframes example {
    from { bottom: 300px; }
}

.new.token {
    animation-name: example;
    animation-duration: 1s;
}

